# fitness_tracker

./: README.md  environment.yml
MetaMotion/: 03_data_feaatures.pkl
files/: build_features.py  count_repetitions.py  make_dataset.py  remove_outliers.py  train_model.py  visualize.py
fitness_tracker/: pyproject.toml
notebooks/: build_features.ipynb  data_preparation.ipynb  train_model.ipynb  visualize.ipynb
