[tool.poetry]
name = "fitness-tracker"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.4"
pandas = "^2.2.2"
ipykernel = "^6.29.4"
ipython = "^8.25.0"
jupyter-client = "^8.6.2"
jupyter-core = "^5.7.2"
matplotlib = "^3.9.0"
plotly = "^5.22.0"
nbformat = "^5.10.4"
scikit-learn = "^1.5.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
